# pillar

./: .dockerignore  .gitignore  .gitmodules  CONTRACTS.md  Cargo.toml  Dockerfile  README.md  build.sh  clean.sh  kill_all.sh  package-lock.json  package.json  passivedocs.yml  run.sh
.github/workflows/: rust.yml
figures/: figures.md
libs/pillar/: Cargo.toml
libs/pillar/src/blockchain/: chain.rs  mod.rs  (+1 more)
libs/pillar_core/: Cargo.toml
libs/pillar_core/src/: lib.rs
libs/pillar_core/src/accounting/: account.rs  mod.rs  state.rs  wallet.rs
libs/pillar_core/src/blockchain/: chain.rs  chain_shard.rs
libs/pillar_core/src/nodes/: miner.rs  mod.rs  node.rs  peer.rs
libs/pillar_core/src/persistence/: database.rs  manager.rs  mod.rs
libs/pillar_core/src/primitives/: block.rs  errors.rs  messages.rs  mod.rs  pool.rs  transaction.rs
libs/pillar_core/src/primitives/implementations/: block.rs  header.rs  mod.rs  tail.rs
libs/pillar_core/src/protocol/: chain.rs  communication.rs  difficulty.rs  mod.rs  peers.rs  pow.rs  reputation.rs  serialization.rs  transactions.rs  versions.rs
libs/pillar_core/src/reputation/: history.rs
libs/pillar_crypto/: Cargo.toml  README.md
libs/pillar_crypto/src/: encryption.rs  hashing.rs  lib.rs  merkle.rs  merkle_trie.rs  proofs.rs  serialization.rs  signing.rs  types.rs
libs/pillar_serialize/: Cargo.toml
libs/pillar_serialize/src/: lib.rs
libs/pillar_wasm/: Cargo.toml
libs/pillar_wasm/src/: engine.rs  host.rs  lib.rs
libs/pillar_wasm/tests/: dlrow_olleh.wasm
pillar/: Cargo.toml
pillar/src/: handles.rs  log_stream.rs  main.rs  run.rs  ws_handles.rs
pillar_monitor/: index.html  package-lock.json  package.json
pillar_monitor/src/: App.css  App.jsx  main.jsx
pillar_monitor/src/api/: utils.js
pillar_monitor/src/components/: BlockComponent.css  BlockComponent.jsx  BlockExplorer.jsx  LogView.css  LogView.jsx  LogViewer.jsx  PeerManager.jsx  StateView.css  StateView.jsx  TransactionSender.jsx  TransactionView.css  TransactionView.jsx
pillar_monitor/src/contexts/: serverContext.jsx
pillar_monitor/src/hooks/: useAddPeer.jsx  useApiCall.jsx  useBlocks.jsx  useDiscoverPeers.jsx  useHttp.jsx  useLogs.jsx  useNodeData.jsx  usePeers.jsx  usePillar.js  useWs.jsx
pillar_monitor/src/pages/: AddTransaction.css  AddTransaction.jsx  Block.css  Block.jsx  BlockGrid.css  Chain.css  Chain.jsx  Overview.jsx  Peers.css  Peers.jsx  Transaction.css  Transaction.jsx  Wallet.css  Wallet.jsx
src/: lib.rs  main.rs
src/accounting/: account.rs
src/blockchain/: account.rs  block.rs  chain.rs  chain_shard.rs  mod.rs  transaction.rs
src/crypto/: hashing.rs  merkle.rs  merkle_trie.rs  mod.rs  proofs.rs  signing.rs
src/nodes/: distribute.rs  messages.rs  miner.rs  mod.rs  node.rs  peer.rs
src/persistence/: database.rs
src/primitives/: block.rs  mod.rs  pool.rs  transaction.rs
src/protocol/: blockchain.rs  chain.rs  communication.rs  difficulty.rs  mod.rs  peers.rs  pow.rs  reputation.rs  transactions.rs
src/reputation/: history.rs  mod.rs
vm_matrix/: launch_vim.sh  runner.py
vm_matrix/images/: pullbase.sh
vm_matrix/images/cloud_init/: user-data
vm_mesh/: README.md  runner.py
vm_mesh/images/: pullbase.sh
vm_mesh/images/cloud_init/: meta-data  network-config  user-data
wasm_samples/: build.sh
wasm_samples/samples/dlrow_olleh/: Cargo.toml
(+16 files in other folders)
