[package]
name = "votingchain"
version = "0.1.0"
edition = "2024"

[dependencies]
crypto = "0.5.1"
ed25519 = "2.2.3"
ed25519-dalek = {version="2.1.1", features=["rand_core"]}
rand_core = {version="0.6.4", features=["std"]}
sha3 = "0.10.8"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_with = "3"
slotmap = "1.0.7"
