[package]
name = "votingchain"
version = "0.1.0"
edition = "2024"

[lib]
name = "votingchain"
path = "src/lib.rs"

[dependencies]
crypto = "0.5.1"
ed25519 = "2.2.3"
ed25519-dalek = {version="2.1.1", features=["rand_core"]}
rand_core = {version="0.6.4", features=["std"]}
sha3 = "0.10.8"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_with = "3"
slotmap = "1.0.7"
rand = "0.9.1"
sled = "0.34.7"
flume = "0.11.1"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ctor = "0.4.2"
tracing-appender = "0.2.3"
chrono = "0.4.41"
tracing-tree = "0.4.0"
