[package]
name = "pillar"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
clap = {version="4.5", features = ["derive"]}
pillar_core = { path = "../libs/pillar_core" }
pillar_serialize = { path = "../libs/pillar_serialize" }
pillar_crypto = { path = "../libs/pillar_crypto" }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
flume = "0.11.1"
tracing = "0.1.41"
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.8.6", features = ["ws"] }
serde_json = "1.0.145"
hex = "0.4.3"
once_cell = "1.21.3"
tower-http = { version = "0.6.6", features = ["cors"] }
