[package]
name = "pillar_crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
pillar_serialize = { path = "../pillar_serialize" }
crypto = "0.5.1"
ed25519 = "2.2.3"
ed25519-dalek = {version="2.1.1", features=["rand_core"]}
rand_core = {version="0.6.4", features=["std"]}
sha3 = "0.10.8"
slotmap = "1.0.7"
rand = "0.9.1"
lz4_flex = "0.11.5"
